--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -31,7 +31,7 @@
         <div class="carousel-item active">
           <img src="/img/1528687618_slipknot_melbourne_soundwave_2012.jpeg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
+            <h5>Sid, Corey and Clown</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
@@ -39,7 +39,7 @@
           <img src="/img/7832742308_a3658c3b1a_c.jpeg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <p>Cras sit amet magna et tortor cursus rhoncus. Nullam eu mauris ac quam posuere</p>
           </div>
         </div>
         <div class="carousel-item">
