--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -32,21 +32,21 @@
           <img src="/img/1528687618_slipknot_melbourne_soundwave_2012.jpeg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Sid, Corey and Clown</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <p>Cras sit amet magna et tortor cursus rhoncus. Nullam eu mauris ac quam posuere</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/img/7832742308_a3658c3b1a_c.jpeg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
+            <h5>Corey</h5>
             <p>Cras sit amet magna et tortor cursus rhoncus. Nullam eu mauris ac quam posuere</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/img/Slipknot_concert.jpeg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h5>Corey</h5>
+            <p>Cras sit amet magna et tortor cursus rhoncus. Nullam eu mauris ac quam posuere</p>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
     <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
       {{ content | safe }}
     </main>
-
+    <aside>Ut blandit libero molestie mollis fermentum. Sed vulputate justo nec metus tincidunt, sit amet iaculis eros tempor. Phasellus sed rhoncus lorem, sed faucibus libero. Nam sit amet tortor id erat condimentum molestie. Donec aliquet odio faucibus, malesuada turpis nec, tincidunt magna. Maecenas malesuada venenatis enim at pretium. Sed tristique, diam a tempor rutrum, erat ipsum ullamcorper justo, ut consectetur lacus odio lobortis sapien. Aenean non suscipit lectus. Fusce aliquet urna quam, sed auctor ipsum cursus ac. Mauris rhoncus purus a quam tincidunt, et rhoncus leo porta. Integer vel enim sagittis, porttitor purus nec, tempus dui. Phasellus commodo varius pretium. </aside>
     <footer></footer>
     <script src="{{ '/js/bootstrap.min.js' | url }}"></script>
     <!-- Current page: {{ page.url | url }} -->
