added aside etc

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -29,24 +29,24 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/img/1528687618_slipknot_melbourne_soundwave_2012.jpeg" class="d-block w-100" alt="...">
+          <img src="/img/1528687618_slipknot_melbourne_soundwave_2012.jpeg" class="d-block w-100" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum elit.">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Sid, Corey and Clown</h5>
-            <p>Cras sit amet magna et tortor cursus rhoncus. Nullam eu mauris ac quam posuere</p>
+            <h5>Shawn, Corey and Sid</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum elit.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/img/7832742308_a3658c3b1a_c.jpeg" class="d-block w-100" alt="...">
+          <img src="/img/7832742308_a3658c3b1a_c.jpeg" class="d-block w-100" alt="Pellentesque finibus accumsan suscipit. Mauris accumsan sit amet quam fermentum malesuada.">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Corey</h5>
-            <p>Cras sit amet magna et tortor cursus rhoncus. Nullam eu mauris ac quam posuere</p>
+            <h5>lorem ipsum</h5>
+            <p>Pellentesque finibus accumsan suscipit. Mauris accumsan sit amet quam fermentum malesuada.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/img/Slipknot_concert.jpeg" class="d-block w-100" alt="...">
+          <img src="/img/Slipknot_concert.jpeg" class="d-block w-100" alt="Mauris bibendum laoreet urna, quis maximus nunc rhoncus vel">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Corey</h5>
-            <p>Cras sit amet magna et tortor cursus rhoncus. Nullam eu mauris ac quam posuere</p>
+            <h5>Third slide text</h5>
+            <p>Mauris bibendum laoreet urna, quis maximus nunc rhoncus vel.</p>
           </div>
         </div>
       </div>
@@ -59,10 +59,10 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
+    <main {% if templateClass %} class="{{ templateClass }}"{% endif %}>
       {{ content | safe }}
     </main>
-    <aside>Ut blandit libero molestie mollis fermentum. Sed vulputate justo nec metus tincidunt, sit amet iaculis eros tempor. Phasellus sed rhoncus lorem, sed faucibus libero. Nam sit amet tortor id erat condimentum molestie. Donec aliquet odio faucibus, malesuada turpis nec, tincidunt magna. Maecenas malesuada venenatis enim at pretium. Sed tristique, diam a tempor rutrum, erat ipsum ullamcorper justo, ut consectetur lacus odio lobortis sapien. Aenean non suscipit lectus. Fusce aliquet urna quam, sed auctor ipsum cursus ac. Mauris rhoncus purus a quam tincidunt, et rhoncus leo porta. Integer vel enim sagittis, porttitor purus nec, tempus dui. Phasellus commodo varius pretium. </aside>
+    <aside><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum elit. Pellentesque finibus accumsan suscipit. Mauris accumsan sit amet quam fermentum malesuada. Mauris bibendum laoreet urna, quis maximus nunc rhoncus vel. In in volutpat purus, vitae pretium ante. Curabitur vel magna accumsan, interdum metus sit amet, consequat metus. Curabitur sem elit, malesuada volutpat magna vitae, laoreet mattis elit.</p></aside>
     <footer></footer>
     <script src="{{ '/js/bootstrap.min.js' | url }}"></script>
     <!-- Current page: {{ page.url | url }} -->
