--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -62,7 +62,9 @@
     <main {% if templateClass %} class="{{ templateClass }}"{% endif %}>
       {{ content | safe }}
     </main>
-    <aside><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum elit. Pellentesque finibus accumsan suscipit. Mauris accumsan sit amet quam fermentum malesuada. Mauris bibendum laoreet urna, quis maximus nunc rhoncus vel. In in volutpat purus, vitae pretium ante. Curabitur vel magna accumsan, interdum metus sit amet, consequat metus. Curabitur sem elit, malesuada volutpat magna vitae, laoreet mattis elit.</p></aside>
+    <aside>
+      <iframe src="https://open.spotify.com/embed/playlist/2EIBQCxyvZB97uklc6a6ps" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet fermentum elit. Pellentesque finibus accumsan suscipit. Mauris accumsan sit amet quam fermentum malesuada. Mauris bibendum laoreet urna, quis maximus nunc rhoncus vel. In in volutpat purus, vitae pretium ante. Curabitur vel magna accumsan, interdum metus sit amet, consequat metus. Curabitur sem elit, malesuada volutpat magna vitae, laoreet mattis elit.</p></aside>
     <footer></footer>
     <script src="{{ '/js/bootstrap.min.js' | url }}"></script>
     <!-- Current page: {{ page.url | url }} -->
