--- a/css/index.css
+++ b/css/index.css
@@ -7,13 +7,36 @@ header img{
 .nav li{
   padding:30px;
 }
+body{
+  width:100%;
+}
 main{
-  width:calc(66.666% - 60px);
+  width:calc(66.666%);
   padding:30px;
   float:left;
 }
 aside{
-  width:calc(33.333% - 60px);
+  width:calc(33.333%);
   padding:30px;
   float:left;
+}
+.iframeContainer {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.iframeContainer iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-with:767px) {
+  main,
+  aside{
+    width: 100%;
+  }
 }
